# budget-app-poc

./: .gitignore  README.md  docker-compose.yaml  pnpm-lock.yaml  pyproject.toml
api/: .env.example
api/apps/accounts/: admin.py  apps.py  models.py
api/apps/accounts/migrations/: 0001_initial.py
api/apps/authentication/: adapters.py  apps.py  serializers.py  urls.py
api/apps/categories/: admin.py  apps.py  models.py
api/apps/categories/migrations/: 0001_initial.py  0002_category_user.py
api/apps/payees/: admin.py  apps.py  models.py
api/apps/payees/migrations/: 0001_initial.py
api/apps/transactions/: admin.py  apps.py  models.py  signals.py
api/apps/transactions/migrations/: 0001_initial.py  0002_transaction_type.py
api/apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py
api/apps/users/migrations/: 0001_initial.py
api/config/: celery_app.py  urls.py
api/config/settings/: base.py  local.py  test.py
apps/web/: tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
images/local/django/: django.Dockerfile  entrypoint  start
